# Song-Player

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  runalone.py  start_app.bat
backend/: .gitignore  pyproject.toml
backend/core/: __init__.py  main.py  utils.py
backend/utils/: gcs.py  mongodb.py  prompts.py  utils.py  ytb_mp3_dl.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: LyricsViewer.tsx  PlayerControls.tsx  PlaylistPanel.tsx  SearchBar.tsx  SongHeader.tsx
frontend/app/lib/: config.ts
lyrics/: MatKetNoi.lrc
