[project]
name = "song-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-cloud-storage>=3.8.0",
    "ipykernel>=7.1.0",
    "pygame>=2.6.1",
    "pymongo[srv]==3.12",
    "pyqt6>=6.10.1",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
